# rotating-log

./: .gitignore  rotating-log.cabal
src/System/: RotatingLog.hs
