name:               rotating-log
version:            0.4.3
description:
  Size-limited, concurrent, automatically-rotating log writer.

synopsis:
  Size-limited, concurrent, automatically-rotating log writer.

license:            BSD3
license-file:       LICENSE
author:             Ozgun Ataman, Doug Beardsley
maintainer:         doug.beardsley@soostone.com
copyright:          Soostone Inc
category:           Logging
build-type:         Simple
cabal-version:      >=1.8
homepage:           http://github.com/Soostone/rotating-log
extra-source-files:
  changelog.md
  README.md

library
  hs-source-dirs:  src
  exposed-modules: System.RotatingLog
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , old-locale
    , time
    , time-locale-compat

  ghc-options:     -Wall -fwarn-tabs

test-suite test-rotate
  type:           exitcode-stdio-1.0
  main-is:        TestRotate.hs
  ghc-options:    -Wall
  hs-source-dirs: test src
  other-modules:  System.RotatingLog
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , time

  ghc-options:    -Wall -fwarn-tabs -threaded

source-repository head
  type:     git
  location: git://github.com/Soostone/rotating-log.git
